# hello-py

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  problem.py  problem_runner.py  pyproject.toml  requirements.txt  ruff.toml  tools.py
problem_data/: slow_ml_training_1.py  slow_ml_training_complex.py  slow_ml_training_pytorch.py
problems/: __init__.py  math_calculation.py  ml_training_optimization.py
saved_output/: run_summary.md
saved_output/run_1/: OPTIMIZATION_SUMMARY.md  optimized_ml_training.py  profile_slow_ml_training_complex_run1.prof
saved_output/run_10/: optimized_ml_training.py  profile_slow_ml_training_complex_run10.prof
saved_output/run_2/: optimized_ml_training.py  profile_slow_ml_training_complex_run2.prof
saved_output/run_3/: optimization_report.md  optimized_ml_training.py  profile_slow_ml_training_complex_run3.prof
saved_output/run_4/: OPTIMIZATION_SUMMARY.md  optimized_ml_training.py  profile_slow_ml_training_complex_run4.prof
saved_output/run_5/: optimized_ml_training.py  profile_slow_ml_training_complex_run5.prof
saved_output/run_6/: optimized_ml_training.py  profile_slow_ml_training_complex_run6.prof
saved_output/run_7/: profile_slow_ml_training_complex_run7.prof
saved_output/run_8/: optimized_ml_training.py  profile_slow_ml_training_complex_run8.prof
tasks/task_csv_filtering/: grader.py  prompt.txt  tools.py
tasks/task_json_summary/: grader.py  prompt.txt  tools.py
tasks/task_logic_puzzle/: grader.py  prompt.txt  tools.py
tasks/task_math_wordproblem/: grader.py  prompt.txt  tools.py
(+9 files in other folders)
